--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -70,7 +70,7 @@ ul, li {
 }
 
 .nav-links_container {
-    border: 1px gold solid;
+    /*border: 1px gold solid;*/
     margin-left: 30px;
     flex-basis: 700px;
 }
